fixed bug in dark mode && added ruby on rails to skills

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -713,7 +713,7 @@ pre tt:after {
 }
 
 .language-text {
-    background-image: linear-gradient(to bottom,  var(--secondaryBgHeavy) 50%,  var(--secondaryBgHeavy)) !important;
+    background-image: linear-gradient(to bottom,  var(--secondaryBg) 50%,  var(--secondaryBg)) !important;
     color: var(--textNormal) !important;
     text-shadow: none !important;
 }
